syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.grpc.models";

message BalanceChequeRequest{
  int32 account_number = 1;

}

//USD
message Balance {
  int32 amount = 1;
}


message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 value = 1;
}

//client streaming
message DepositRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService{
  //unary
  rpc getBalance(BalanceChequeRequest) returns (Balance);
  //server side streaming
  rpc withdraw(WithdrawRequest) returns(stream Money);
  //client side streaming>send to bank many time
  rpc cashDeposit(stream DepositRequest) returns (Balance);
}